[package]
name = "yao-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "yao-mcp"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"

[features]
default = ["http"]

http = []  # HTTP transport support
stdio = [] # STDIO transport support

[dependencies]
rmcp = { version = "0.11.0", features = [
    "server",
    "macros",
    "client",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars"
]}
tokio = { version = "1.48.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
]}
tokio-util = "0.7.17"

# TODO: features !
# for http transport support
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1.8.1" }
hyper-util = { version = "0.1.19", features = ["server", "service"] }
axum = "0.8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.5.53", features = ["derive", "env"] }
#anyhow = "1.0"

# filesystem handling
path_trav = "2"
path-absolutize = "3.1.1"

# tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt", "json"] }

[dev-dependencies]
tempfile = "3"
